modified:   .gitignore 	new file:   SF_FinalExam/FinalExam.ipynb 	new file:   SF_FinalExam/README.md 	new file:   SF_FinalExam/catboost_info/catboost_training.json 	new file:   SF_FinalExam/catboost_info/learn/events.out.tfevents 	new file:   SF_FinalExam/catboost_info/learn_error.tsv 	new file:   SF_FinalExam/catboost_info/time_left.tsv 	new file:   SF_FinalExam/data/sample_submission.csv 	new file:   SF_FinalExam/data/test.csv 	new file:   SF_FinalExam/data/train_labels.csv 	new file:   SF_FinalExam/requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ SF_Project-05_ML_Regression/data/Project5_osrm_data_test.csv
 SF_Project-05_ML_Regression/data/train.csv
 SF_Project-05_ML_Regression/data/Project5_test_data.csv
 
+SF_FinalExam/data/train.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
